Fix post first line covered by header problem

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,11 @@
 ---
 
 @import 'jekyll-theme-merlot';
+
+header {
+  position: relative;
+  z-index: 2;
+  margin: 0 auto;
+  max-width: 600px;
+  top: 0px;
+}
